--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "1.1.4",
     "rebass": "^1.0.7",
     "redux": "^4.0.0",
+    "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
